src/rvsdg/snapshots/eggcc__rvsdg__optimize_direct_jumps__add_block_ind_test.snap
---
source: src/rvsdg/optimize_direct_jumps.rs
expression: cfg.optimize_jumps().to_bril().to_string()
---
@main {
  v0: int = const 1;
  v1: int = const 2;
  v2: int = add v0 v1;
  print v2;
}

